開発コンテナにpython編集に必要なVSCode拡張を導入するようにした

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,5 +2,7 @@
   "dockerComposeFile": "../docker-compose.yaml",
   "service": "dev",
   "workspaceFolder": "/home/dev/problems",
-  "shutdownAction": "stopCompose"
+  "shutdownAction": "stopCompose",
+  "extensions": ["ms-python.python", "ms-python.vscode-pylance",
+                "oderwat.indent-rainbow", "kevinrose.vsc-python-indent","medo64.render-crlf"]
 }
